# yet-another-fallout-terminal-hacking-game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  main.cpp  readme.md  words.cpp
include/: engine.hpp  random.hpp  random_generator.hpp  yafth_engine.hpp
include/yafth/: engine.h  random.h
include/yafth/app/: application.h  game_controller.h
include/yafth/core/: engine.h  engine_interface.h  input_handler_interface.h  renderer_interface.h  terminal_layout.h  types.h
include/yafth/core/engine_detail/: game_state.h  interaction_logic.h  symbol_manipulator.h  terminal_buffer.h  word_repository.h
include/yafth/ui/: cin_input_handler.h  cout_renderer.h  ftxui_input_handler.h  ftxui_renderer.h  ftxui_shared_state.h  user_interface.h
include/yafth/util/: args.h  random.h
src/: engine.cpp  main.cpp  yafth_engine.cpp
src/app/: application.cpp  game_controller.cpp  main.cpp
src/core/: engine.cpp
src/core/detail/: game_state.cpp  game_state.hpp  interaction_logic.cpp  interaction_logic.hpp  symbol_manipulator.cpp  symbol_manipulator.hpp  terminal_buffer.cpp  terminal_buffer.hpp  word_repository.cpp  word_repository.hpp
src/core/engine_detail/: game_state.cpp  interaction_logic.cpp  symbol_manipulator.cpp  terminal_buffer.cpp  word_repository.cpp
src/ui/: cin_input_handler.cpp  cout_renderer.cpp  ftxui_shared_state.cpp  user_interface.cpp
src/util/: args.cpp
